<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_success_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:background="@drawable/home_background"
        android:padding="@dimen/dimen_15"
        android:text="@string/login_success_message"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginEnd="@dimen/dimen_30"
        android:background="@drawable/background_shape"
        android:elevation="5dp"
        android:padding="@dimen/dimen_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_background"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15">

                <TextView
                    android:id="@+id/email_address_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20" />

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_container"
                android:layout_marginTop="@dimen/dimen_50"
                android:background="@drawable/home_background"
                android:orientation="vertical"
                android:padding="@dimen/dimen_15">

                <TextView
                    android:id="@+id/password_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_label"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20" />

                <TextView
                    android:id="@+id/pw_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>